--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: CI Pipeline 
+name: CI Pipeline
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-    
+
 env:
   DOTNET_VERSION: '8.0.x'
-  
+
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     
     steps:
-    -uses: actions/checkout@v3
+      - uses: actions/checkout@v3
