fixing errors main.yml
fixing errors with the project version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,31 +8,20 @@ on:
 
 env:
   DOTNET_VERSION: '8.0.x'
-  DOTNET_FRAMEWORK_VERSION: '4.7.2'
 
 jobs:
   build:
     runs-on: windows-latest
-    
     steps:
-      - name: Checkout code
-      - uses: actions/checkout@v3
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION}}
-          
-      - name: Cache NuGet packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
-
-      - name: Rstore dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
+    - uses: actions/checkout@v3
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+        
+    - name: Restore dependencies
+      run: dotnet restore
+      
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
