--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,17 @@ jobs:
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
+
+  test:
+    needs: build 
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actiond/checkout@v3
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: $ {{ env.DOTNET_VERSION }}
+
+    - name: Run tests
+      run: dotnet test --no-build --versiom normal
